[package]
name = "hid_list"
version = "0.1.1"
authors = ["Ngo Iok Ui <wusyong9104@gmail.com>"]
edition = "2018"
default-run = "hid_list"
license = "MIT/Apache-2.0"
description = "Raw windows call to USB HID class showing current driver list"

[dependencies]
winapi = { version = "0.3.8", features = ["hidclass", "debug", "hidsdi", "setupapi", "impl-default", "fileapi", "winnt", "winbase", "handleapi", "hidpi"] }
libc = "0.2.71"
