[package]
name = "hid_list"
version = "0.1.1"
authors = ["Ngo Iok Ui <wusyong9104@gmail.com>"]
edition = "2018"
default-run = "hid_list"
license = "MIT/Apache-2.0"
description = "Raw windows call to USB HID class showing current driver list"

[dependencies]
winapi = { version = "0.3.8", features = ["debug", "fileapi", "hidclass", "hidsdi", "handleapi", "hidpi", "impl-default", "setupapi", "winnt", "winbase"] }
libc = "0.2.71"
